apps/dev/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`glance.vortex-1.lan`) || Host(`glance.tstarr.us`)
      kind: Rule
      services:
        - name: glance-service
          port: 80

    - match: Host(`link.vortex-1.lan`) || Host(`link.tstarr.us`)
      kind: Rule
      services:
        - name: linkding-service
          port: 80

    - match: Host(`rdp.vortex-1.lan`) || Host(`rdp.tstarr.us`)
      kind: Rule
      services:
        - name: remmina-service
          port: 80

    - match: Host(`code.vortex-1.lan`) || Host(`code.tstarr.us`)
      kind: Rule
      services:
        - name: code-server-service
          port: 80

    - match: Host(`media.vortex-1.lan`) || Host(`media.tstarr.us`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 80

    - match: Host(`2fa.vortex-1.lan`) || Host(`2fa.tstarr.us`)
      kind: Rule
      services:
        - name: twof-auth-service
          port: 80

    - match: Host(`git.vortex-1.lan`) || Host(`git.tstarr.us`)
      kind: Rule
      services:
        - name: gitea-service
          port: 80

    - match: Host(`cloud.vortex-1.lan`) || Host(`cloud.tstarr.us`)
      kind: Rule
      services:
        - name: nextcloud-service
          port: 80

    - match: Host(`lc.vortex-1.lan`) || Host(`lc.tstarr.us`)
      kind: Rule
      services:
        - name: mattermost-service
          port: 80

    - match: Host(`rssbridge.vortex-1.lan`) || Host(`rssbridge.tstarr.us`)
      kind: Rule
      services:
        - name: rss-bridge-service
          port: 80

    - match: Host(`rss.vortex-1.lan`) || Host(`rss.tstarr.us`)
      kind: Rule
      services:
        - name: miniflux-service 
          port: 80

    - match: Host(`tandoor.vortex-1.lan`) || Host(`tandoor.tstarr.us`)
      kind: Rule
      services:
        - name: tandoor-service 
          port: 80
      middlewares:
        - name: tandoor-headers

    - match: Host(`romm.vortex-1.lan`) || Host(`romm.tstarr.us`)
      kind: Rule
      services:
        - name: romm-service 
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tandoor-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    sslProxyHeaders:
      X-Forwarded-Proto: "https"
